WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145904
DFG Object Allocation Sinking should not consider GetClosureVar as escapes
https://bugs.webkit.org/show_bug.cgi?id=145904
Summary
DFG Object Allocation Sinking should not consider GetClosureVar as escapes
Basile Clement
Reported
2015-06-11 18:25:49 PDT
DFG Object Allocation Sinking should not consider GetClosureVar as escapes
Attachments
Patch
(2.72 KB, patch)
2015-06-11 18:39 PDT
,
Basile Clement
no flags
Details
Formatted Diff
Diff
Patch for landing
(2.78 KB, patch)
2015-06-12 08:39 PDT
,
Basile Clement
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Basile Clement
Comment 1
2015-06-11 18:39:06 PDT
Created
attachment 254774
[details]
Patch
Basile Clement
Comment 2
2015-06-12 08:39:49 PDT
Created
attachment 254803
[details]
Patch for landing
WebKit Commit Bot
Comment 3
2015-06-12 09:34:13 PDT
Comment on
attachment 254803
[details]
Patch for landing Clearing flags on attachment: 254803 Committed
r185505
: <
http://trac.webkit.org/changeset/185505
>
WebKit Commit Bot
Comment 4
2015-06-12 09:34:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug